--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flaggy",
   "version": "1.3.29",
-  "description": "Generates flags for unix command from a key/value object",
+  "description": "Zero dependency command flag generator from a simple javascript object",
   "main": "index.js",
   "scripts": {
     "test": "nyc --reporter=lcov  --reporter=text-summary ava",
